--- a/assets/style.css
+++ b/assets/style.css
@@ -1,163 +1,158 @@
 * {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-header{
-    color: aliceblue;
-    display: block;
-    font-weight: bold;
-    font-style: italic;
-    background-color:cadetblue;
-    border: 10px;
-    border-color: chocolate;
-    padding: 10px;
-    margin: auto;
-    font-size: 50px;
-
+header {
+  color: aliceblue;
+  display: block;
+  font-weight: bold;
+  font-style: italic;
+  background-color: cadetblue;
+  border: 10px;
+  border-color: chocolate;
+  padding: 10px;
+  margin: auto;
+  font-size: 50px;
 }
 
 h1 {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 100px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 100px;
 }
 
-
 header nav ul {
-    color:ivory;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    list-style: none;
+  color: ivory;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style: none;
 }
 
 body {
-    width: 100%;
-    background-color:lightslategrey;
-    text-decoration: none;
+  width: 100%;
+  background-color: lightslategrey;
+  text-decoration: none;
 }
-
-
 
 #profile-pic {
-    width: 300px;
-    border-radius: 5px;
+  width: 300px;
+  border-radius: 5px;
 }
 
-#run-buddy, 
+#lotr-rpg,
+#run-buddy,
 #horiseon-refactor,
 #robot-gladiators {
-    width: 500px;
-    margin: 50px;
-    padding: 10px;
-    border-radius: 5px;
+  width: 500px;
+  margin: 50px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 div {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-
-} 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+}
 
 .flex-row {
-    display: flex;
+  display: flex;
 }
 
 .section-title {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 80px;
-    font-style: italic;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 80px;
+  font-style: italic;
 }
 
+div #lotr-rpg,
 div #Run-Buddy,
 div #Horiseon-Refactor,
 div #Robot-Gladiators {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 50px;
-    text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 50px;
+  text-decoration: none;
 }
 
 #AboutMe {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 #ContactMe {
-   font-size: 30px;
-   color:lightgreen; 
+  font-size: 30px;
+  color: lightgreen;
 }
 
 #ContactMe a {
-    color:lightgreen;
+  color: lightgreen;
 }
-
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
-    }
-
-    header h1 {
-        width: 100%;
-        text-align: center;
-    }
-
-    header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-    }
-
-    header nav ul li a {
-        font-size: 20px;
-    }
-
-
-  }
-  
-  /* MEDIA QUERY FOR TABLETS AND SMALLER */
-  @media screen and (max-width: 768px) {
-    section {
-        padding: 30px 15px;
-    }
-  }
-  
-  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-  @media screen and (max-width: 575px) {
-    
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
   }
 
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  section {
+    padding: 30px 15px;
+  }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+}
 
 @media only screen and (max-width: 600px) {
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  body {
+    font-size: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media only screen and (min-width: 600px) {
-    
+  body {
+    font-size: 10px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-    
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
 }
 
 @media only screen and (min-width: 992px) {
-    
 }
 
 @media only screen and (min-width: 1200px) {
-    
 }
-  
